<resources>
    <string name="app_name" translatable="false">Virtual Virtual Boy</string>
    <string name="main_menu_game_actions" translatable="false">Game Actions</string>
    <string name="main_menu_now_playing" translatable="false">Now Playing</string>
    <string name="main_menu_load_game" translatable="false">Load Game</string>
    <string name="main_menu_onscreen_input_setup" translatable="false">On-Screen Input Setup</string>
    <string name="main_menu_controller_setup" translatable="false">Controller Setup</string>
    <string name="main_menu_video_setup" translatable="false">Video Setup</string>
    <string name="main_menu_audio_setup" translatable="false">Audio Setup</string>
    <string name="main_menu_general_setup" translatable="false">General Setup</string>
    <string name="main_menu_about" translatable="false">About</string>
    <string name="load_game_from_file">Load From File</string>
    <string name="load_game_from_file_explanation">You can download ROMs of Virtual Boy games, and load them here to play them.\nYou can find free ROMs from Planet Virtual Boy, at https://virtual-boy.com/homebrew/.</string>
    <string name="load_game_from_file_explanation_button" translatable="false">OK</string>
    <string name="load_game_recent_games">Recent Games</string>
    <string name="load_game_no_recent_games">You haven\'t played any games yet. Try one out!</string>
    <string name="load_game_bundled_games">Bundled Games</string>
    <string name="load_game_no_bundled_games">No Bundled Games</string>
    <string name="load_game_created_by" translatable="false">Created by %1$s</string>
    <string name="game_menu_resume_game">Resume Game</string>
    <string name="game_menu_reset_game">Reset</string>
    <string name="game_menu_auto_save">Auto-Save</string>
    <string name="game_menu_save_state">Save State</string>
    <string name="game_menu_load_state">Load State</string>
    <string name="game_menu_state_slot">State Slot</string>
    <string name="game_menu_state_slot_name" translatable="false">Slot %1$s</string>
    <string name="game_menu_state_slot_empty">Empty</string>
    <string name="game_menu_state_slot_saved" translatable="false">Saved: %1$s</string>
    <string name="game_menu_close_game">Close Game</string>
    <string name="general_menu_sustained_performance_mode">Sustained Performance Mode</string>
    <string name="general_menu_sustained_performance_mode_summary">May run more slowly. Attempts to avoid thermal throttling by reducing cpu speed</string>
    <string name="general_menu_data_storage_location">Game Data Storage Location</string>
    <string name="data_storage_location_internal_summary">Internal</string>
    <string name="data_storage_location_internal_description">Stored in scoped storage on your phone. Automatically included in backups.</string>
    <string name="data_storage_location_external_summary">External</string>
    <string name="data_storage_location_external_description">Stored in a folder of your choice.</string>
    <string name="general_menu_data_storage_external_directory">Game Data Directory</string>
    <string name="onscreen_input_menu_on">Use Virtual Gamepad</string>
    <string name="onscreen_input_menu_toggle_controls">Put Trigger Buttons in Toggle Mode</string>
    <string name="onscreen_input_menu_haptic_feedback">Enable Haptic Feedback</string>
    <string name="onscreen_input_menu_parallax">Parallax</string>
    <string name="onscreen_input_menu_show_bounds">Show Control Bounds</string>
    <string name="onscreen_input_menu_preview">Preview</string>
    <string name="controller_menu_controllers">Controllers</string>
    <string name="controller_menu_manage">Manage Controllers</string>
    <string name="controller_menu_automap_new_controller">Auto-Map New Controller</string>
    <string name="controller_menu_choose_controller">Choose Controller to Map</string>
    <string name="controller_menu_no_controllers_detected">No controllers detected…</string>
    <string name="controller_menu_new_controller">New Controller</string>
    <string name="controller_menu_rename_controller">Rename Controller</string>
    <string name="controller_menu_delete_controller">Delete Controller</string>
    <string name="controller_menu_name">Controller Name?</string>
    <string name="controller_menu_create">Create</string>
    <string name="controller_menu_cancel">Cancel</string>
    <string name="controller_menu_rename">Rename</string>
    <string name="controller_menu_choose_rename">Choose controller to rename…</string>
    <string name="controller_menu_choose_delete">Choose controller to delete…</string>
    <string name="controller_menu_default_name">Controller %1$d</string>
    <string name="input_menu_dpad_left">Left D-Pad</string>
    <string name="input_menu_dpad_right">Right D-Pad</string>
    <string name="input_menu_button_left">Left</string>
    <string name="input_menu_button_right">Right</string>
    <string name="input_menu_button_up">Up</string>
    <string name="input_menu_button_down">Down</string>
    <string name="input_menu_button_a">A</string>
    <string name="input_menu_button_b">B</string>
    <string name="input_menu_button_lt">L Trigger</string>
    <string name="input_menu_button_rt">R Trigger</string>
    <string name="input_menu_button_start">Start</string>
    <string name="input_menu_button_select">Select</string>
    <string name="input_menu_unmapped">Unmapped</string>
    <string name="input_menu_put_mapping">Press any control to map it to this input. Long press to map multiple controls.</string>
    <string name="input_menu_add_mapping">Press any control to add another mapping for this input.</string>
    <string name="video_menu_screen_zoom_percent">Screen Zoom (percent)</string>
    <string name="video_menu_horizontal_offset">Horizontal Offset</string>
    <string name="video_menu_vertical_offset">Vertical Offset</string>
    <string name="video_menu_mode">Display Mode</string>
    <string name="video_mode_anaglyph_summary">Anaglyph (two-color)</string>
    <string name="video_mode_anaglyph_description">Works with most pairs of 3D glasses</string>
    <string name="video_mode_cardboard_summary">Google Cardboard</string>
    <string name="video_mode_cardboard_description">Works with Google Cardboard or Daydream</string>
    <string name="video_mode_mono_left_summary">Left eye only</string>
    <string name="video_mode_mono_right_summary">Right eye only</string>
    <string name="video_mode_mono_description">No equipment needed, but no 3D effects</string>
    <string name="video_mode_stereo_summary">Side-by-side</string>
    <string name="video_mode_stereo_description">Works with 3D TVs</string>
    <string name="video_mode_leia_summary">LitByLeia</string>
    <string name="video_mode_leia_description">Works with Lume Pad &amp; RED Hydrogen One</string>
    <string name="video_menu_aspect_ratio">Aspect Ratio</string>
    <string name="aspect_ratio_auto">Auto</string>
    <string name="aspect_ratio_stretch">Stretch to Fit</string>
    <string name="video_menu_color">Color</string>
    <string name="video_menu_color_left">Left Eye Color</string>
    <string name="video_menu_color_right">Right Eye Color</string>
    <string name="video_menu_color_fg">Foreground Color</string>
    <string name="video_menu_color_bg">Background Color</string>
    <string name="video_menu_invalid_colors_title">Invalid Colors</string>
    <string name="video_menu_invalid_colors_message">The left and right eye colors "overlap" on at least one color channel. The 3D effect may not work properly.</string>
    <string name="video_menu_invalid_colors_button">OK</string>
    <string name="video_menu_switch_viewer">Switch Cardboard Viewer</string>
    <string name="video_menu_preview">Preview</string>
    <string name="audio_menu_volume">Volume</string>
    <string name="audio_menu_buffer_size">Buffer Size (in frames)</string>
    <string name="audio_menu_buffer_size_description">Lowering this will reduce audio delay, but may cause crackling sounds.</string>
    <string name="about_app_version">App Version</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_privacy_policy_link">https://www.simongellis.com/privacy/vvb.html</string>
    <string name="application_crashed">Sorry, the application crashed. A report will be sent to the developer.</string>
    <string name="error_file_not_found">That file could not be found. Maybe it was moved?</string>
    <string name="error_not_power_of_two">That\'s not a Virtual Boy game! The file size should be a power of two.</string>
    <string name="error_too_large">That\'s not a Virtual Boy game! They can only be up to 16Mb.</string>
    <string name="error_zip">Nothing in that ZIP file looked like a Virtual Boy game…</string>
    <string name="toast_state_saved">Saved state</string>
    <string name="toast_state_loaded">Loaded state</string>
</resources>
