<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="dpad_left"
        app:title="@string/input_menu_dpad_left">
        <Preference
            app:key="input_ll"
            app:title="@string/input_menu_button_left"/>
        <Preference
            app:key="input_lr"
            app:title="@string/input_menu_button_right"/>
        <Preference
            app:key="input_lu"
            app:title="@string/input_menu_button_up"/>
        <Preference
            app:key="input_ld"
            app:title="@string/input_menu_button_down"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:key="dpad_right"
        app:title="@string/input_menu_dpad_right">
        <Preference
            app:key="input_rl"
            app:title="@string/input_menu_button_left"/>
        <Preference
            app:key="input_rr"
            app:title="@string/input_menu_button_right"/>
        <Preference
            app:key="input_ru"
            app:title="@string/input_menu_button_up"/>
        <Preference
            app:key="input_rd"
            app:title="@string/input_menu_button_down"/>
    </PreferenceCategory>
    <Preference
        app:key="input_a"
        app:title="@string/input_menu_button_a"/>
    <Preference
        app:key="input_b"
        app:title="@string/input_menu_button_b"/>
    <Preference
        app:key="input_lt"
        app:title="@string/input_menu_button_lt"/>
    <Preference
        app:key="input_rt"
        app:title="@string/input_menu_button_rt"/>
    <Preference
        app:key="input_start"
        app:title="@string/input_menu_button_start"/>
    <Preference
        app:key="input_select"
        app:title="@string/input_menu_button_select"/>
</PreferenceScreen>