<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.simongellis.vvb.menu.DetailedListPreference
        app:key="video_mode"
        app:title="@string/video_menu_mode"
        app:defaultValue="ANAGLYPH"/>
    <ListPreference
        app:key="video_aspect_ratio"
        app:title="@string/video_menu_aspect_ratio"
        app:entries="@array/aspect_ratio_names"
        app:entryValues="@array/aspect_ratio_values"
        app:defaultValue="AUTO"/>
    <SeekBarPreference
        app:key="video_screen_zoom_percent"
        app:title="@string/video_menu_screen_zoom_percent"
        app:min="0"
        android:max="100"
        app:showSeekBarValue="true"
        app:seekBarIncrement="5"
        app:defaultValue="100"/>
    <SeekBarPreference
        app:key="video_horizontal_offset"
        app:title="@string/video_menu_horizontal_offset"
        app:min="-50"
        android:max="50"
        app:showSeekBarValue="true"
        app:seekBarIncrement="5"
        app:defaultValue="0"/>
    <SeekBarPreference
        app:key="video_vertical_offset"
        app:title="@string/video_menu_vertical_offset"
        app:min="-50"
        android:max="50"
        app:showSeekBarValue="true"
        app:seekBarIncrement="5"
        app:defaultValue="0"/>
    <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
        app:key="video_color"
        app:title="@string/video_menu_color"
        app:defaultValue="@color/red"
        app:colorShape="square"
        app:colorChoices="@array/cardboard_color_choices"
        app:numColumns="4"/>
    <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
        app:key="video_color_left"
        app:title="@string/video_menu_color_left"
        app:defaultValue="@color/red"
        app:colorShape="square"
        app:colorChoices="@array/anaglyph_color_choices"
        app:numColumns="4"/>
    <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
        app:key="video_color_right"
        app:title="@string/video_menu_color_right"
        app:defaultValue="@color/blue"
        app:colorShape="square"
        app:colorChoices="@array/anaglyph_color_choices"
        app:numColumns="4"/>
    <Preference
        app:key="video_switch_viewer"
        app:title="@string/video_menu_switch_viewer"
        />
    <Preference
        app:key="video_preview"
        app:title="@string/video_menu_preview"/>
</PreferenceScreen>