<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <Preference
        app:key="game_actions"
        app:title="@string/main_menu_game_actions"
        app:fragment="com.simongellis.vvb.menu.GameMenuFragment"
        tools:context=".menu.GameMenuFragment"
        app:isPreferenceVisible="false"/>
    <Preference
        app:key="load_game"
        app:title="@string/main_menu_load_game"
        app:fragment="com.simongellis.vvb.menu.LoadGameMenuFragment"
        tools:context=".menu.LoadGameMenuFragment"/>
    <Preference
        app:key="recent_games"
        app:title="@string/main_menu_recent_games"
        app:fragment="com.simongellis.vvb.menu.RecentGamesMenuFragment"
        tools:context=".menu.RecentGamesMenuFragment"/>
    <Preference
        app:key="onscreen_input"
        app:title="@string/main_menu_onscreen_input_setup"
        app:fragment="com.simongellis.vvb.menu.OnscreenInputMenuFragment"
        tools:context=".menu.OnscreenInputMenuFragment"/>
    <Preference
        app:key="controller_input"
        app:title="@string/main_menu_controller_setup"
        app:fragment="com.simongellis.vvb.menu.ControllersMenuFragment"
        tools:context=".menu.ControllersMenuFragment"/>
    <Preference
        app:key="video"
        app:title="@string/main_menu_video_setup"
        app:fragment="com.simongellis.vvb.menu.VideoMenuFragment"
        tools:context=".menu.VideoMenuFragment"/>
    <Preference
        app:key="audio"
        app:title="@string/main_menu_audio_setup"
        app:fragment="com.simongellis.vvb.menu.AudioMenuFragment"
        tools:context=".menu.AudioMenuFragment"/>
</PreferenceScreen>