<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:src="@drawable/ic_dpad_center"
        android:contentDescription="@string/input_menu_dpad_right"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:src="@drawable/ic_dpad_arrow"
        android:contentDescription="@string/input_menu_button_up"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:src="@drawable/ic_dpad_arrow"
        android:rotation="90"
        android:contentDescription="@string/input_menu_button_right"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/down"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:src="@drawable/ic_dpad_arrow"
        android:rotation="180"
        android:contentDescription="@string/input_menu_button_down"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:src="@drawable/ic_dpad_arrow"
        android:rotation="270"
        android:contentDescription="@string/input_menu_button_left"
        />
</androidx.constraintlayout.widget.ConstraintLayout>